minor issue updates : gap between gallary and footer, using extend for gallary img

--- a/src/scss/_shortcut.scss
+++ b/src/scss/_shortcut.scss
@@ -21,3 +21,12 @@
     border-bottom: 1px solid #ff6429;
   }
 }
+
+%gallaryImg {
+  background-position: center;
+  background-size: cover;
+  transition: box-shadow 0.3s ease-in;
+  &:hover {
+    box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.75);
+  }
+}
