--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -99,7 +99,7 @@ main {
       }
     }
     .text-column {
-      background-color: white;
+      background-color: #f6f6f6;
       height: 100vh;
       width: 100%;
       position: sticky;
@@ -140,8 +140,8 @@ main {
   }
   .gallary {
     width: 100%;
-    height: 100vh;
-    background-color: white;
+    height: 100.3vh;
+    background-color: #f6f6f6;
     display: grid;
     margin: 3px 0;
     gap: 3px;
@@ -152,11 +152,7 @@ main {
       &:first-child {
         grid-template-columns: 2fr 1fr 1fr;
         .gallary-img {
-          background-position: center;
-          background-size: cover;
-          &:hover {
-            box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.7);
-          }
+          @extend %gallaryImg;
           &:first-child {
             background-image: url("../img/cosmetic1.jpg");
             background-position: top;
@@ -173,11 +169,7 @@ main {
       &:nth-child(2) {
         grid-template-columns: 1fr 2fr 1fr;
         .gallary-img {
-          background-position: center;
-          background-size: cover;
-          &:hover {
-            box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.7);
-          }
+          @extend %gallaryImg;
           &:first-child {
             background-image: url("../img/cosmetic10.jpg");
           }
@@ -201,7 +193,6 @@ footer {
   color: white;
   padding: 20vh 13% 15vh 13%;
   display: flex;
-  margin-top: 3px;
   flex-direction: column;
   justify-content: space-between;
   .footer_row:first-child {
